--- a/package.json
+++ b/package.json
@@ -23,6 +23,11 @@
     "src",
     "dist"
   ],
+  "release": {
+    "branches": [
+      "main"
+    ]
+  },
   "scripts": {
     "commit": "git-cz",
     "dev": "vite demo",
@@ -56,7 +61,8 @@
     "husky": "4",
     "prettier": "^2.2.1",
     "typescript": "^4.1.2",
-    "vite": "^2.1.0"
+    "vite": "^2.1.0",
+    "semantic-release": "^17.4.2"
   },
   "config": {
     "commitizen": {
