--- a/package.json
+++ b/package.json
@@ -38,17 +38,15 @@
     "format": "prettier --check --write .",
     "lint": "eslint .",
     "types": "tsc",
-    "test": "echo \"No tests.\"",
+    "test": "jest",
     "prepack": "yarn build",
     "semantic-release": "semantic-release"
-  },
-  "dependencies": {
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "12.0.1",
     "@commitlint/config-conventional": "12.0.1",
+    "@testing-library/react": "^11.2.5",
+    "@types/jest": "^26.0.21",
     "@types/node": "14.14.35",
     "@types/react": "17.0.3",
     "@types/react-dom": "17.0.2",
@@ -57,12 +55,17 @@
     "@vitejs/plugin-react-refresh": "1.3.1",
     "commitizen": "4.2.3",
     "cz-conventional-changelog": "3.3.0",
+    "esbuild": "0.9.5",
+    "esbuild-jest": "0.5.0",
     "eslint": "7.22.0",
     "husky": "4.3.8",
+    "jest": "^26.6.3",
     "prettier": "2.2.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "semantic-release": "17.4.2",
     "typescript": "4.2.3",
-    "vite": "2.1.2",
-    "semantic-release": "17.4.2"
+    "vite": "2.1.2"
   },
   "config": {
     "commitizen": {
