--- a/package.json
+++ b/package.json
@@ -79,8 +79,7 @@
   },
   "husky": {
     "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "pre-push": "git branch | grep \"*\" | egrep -v \"^* main$\""
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
   "eslintConfig": {
