test: :white_check_mark: add jest-dom matchers in test

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,5 @@
       "@matejbransky/react-lib": ["."]
     }
   },
-  "include": ["./demo", "./src", "vite.config.ts"]
+  "include": ["./demo", "./src", "vite.config.ts", "jest-setup.ts"]
 }
