--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "devDependencies": {
     "@commitlint/cli": "12.0.1",
     "@commitlint/config-conventional": "12.0.1",
+    "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "11.2.5",
     "@types/jest": "26.0.21",
     "@types/node": "14.14.35",
